--- a/frontend/index.html
+++ b/frontend/index.html
@@ -112,6 +112,11 @@
             <button id="toggleTimelineBtn" title="Show/Hide Timeline" style="margin-left: 8px; display: none;">Show Timeline</button>
             <button id="createSubtreeBtn" title="Create a new detailed tree from selected combined clusters" style="display: none; background-color: #ff9800; margin-left: 8px;">Create Sub-Tree from Selection</button>
             <button id="backToMainTreeBtn" title="Return to the main tree view" style="display: none; background-color: #03a9f4; margin-left: 8px;">Back to Main Tree</button>
+            <button id="magnifyingGlassBtn" title="Toggle magnifying glass" style="margin-left: 8px;">Magnifying Glass</button>
+            <div style="display: inline-block; margin-left: 15px;">
+                <label for="magnifyingGlassZoom">Zoom:</label>
+                <input type="number" id="magnifyingGlassZoom" value="2" min="1" max="10" step="0.5" style="width: 60px;">
+            </div>
         </div>
         <div id="csvProcessTime" style="font-size: 0.75em; color: #555; margin-top: -12px; margin-bottom: 12px; padding-left: 2px; text-align: left; display: none; height: 1.2em;"></div>
     <div id="mainFilterGroup" class="control-group" title="Filter data displayed in heatmap." style="display: none;">
