--- a/frontend/index.html
+++ b/frontend/index.html
@@ -142,6 +142,9 @@
             <button id="showPacketSimilarityBtn" title="Visualize Louvain IP Communities" style="margin-left: 8px; display: none;">Show Community IP Graph</button>
             <button id="showSankeyBtn" title="Visualize data flows with Sankey diagram" style="margin-left: 8px; display: none;">Show Sankey Diagram</button>
             <button id="toggleTimelineBtn" title="Show/Hide Timeline" style="margin-left: 8px; display: none;">Show Timeline</button>
+
+            <button id="toggleHttpFilterBtn" title="Filter out HTTP sessions and regenerate heatmap" style="display: none; background-color: #ff9800; margin-left: 8px;">Filter HTTP Sessions</button>
+
             <button id="createSubtreeBtn" title="Create a new detailed tree from selected combined clusters" style="display: none; background-color: #ff9800; margin-left: 8px;">Create Sub-Tree from Selection</button>
             <button id="backToMainTreeBtn" title="Return to the main tree view" style="display: none; background-color: #03a9f4; margin-left: 8px;">Back to Main Tree</button>
             
