--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div id="loading-overlay" title="Data is loading...">
+  <div id="loading-overlay">
     <div class="spinner"></div>
     <div class="loading-text">Loading, please wait...</div>
     <button id="cancelLoadingBtn" style="margin-top: 20px; padding: 8px 16px; background-color: #f44336; color: white; border: none; border-radius: 4px; cursor: pointer; font-size: 14px;">Cancel</button>
